--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,4 @@ services:
       - SEGMENT_REDIS_SERVER=redis
       - SEGMENT_REDIS_PORT=6379
       - SEGMENT_CACHE_EXPIRY=180
+      - SEGMENT_CACHE_CAPACITY=10
